# piebot

./: .gitignore  LICENSE  Makefile  README.md
rust/crates/serverd/: Cargo.toml
rust/crates/serverd/src/: audit.rs  cli.rs  command.rs  context.rs  lenses.rs  lib.rs  main.rs  memory.rs  memory_lattice.rs  mutations.rs  output_contract.rs  prompt.rs  provider.rs  redaction.rs  ref_utils.rs  router.rs  skills.rs  state_delta_artifact.rs  tick_core.rs
rust/crates/serverd/tests/: invariants_capsule_sufficient_verification.rs  invariants_cross_runtime_replay_parity.rs  invariants_lens_context_policy_denial.rs  invariants_request_hash_observation.rs  invariants_tool_chokepoint.rs  operations_approval.rs  operations_learnings.rs  operations_operator_actions.rs  operations_prompt_build.rs  operations_task_ingest.rs  operations_verify_cmd.rs  operations_verify_replay.rs  pipeline_b5_workflow_demo.rs  pipeline_stage6_end_to_end.rs  pipeline_task_queue_run.rs  pipeline_tick.rs  skill_port_plan.rs  stage_gate_7_12.rs  subsystem_capsule_export.rs  subsystem_context_policy.rs  subsystem_explain.rs  subsystem_gsama_retrieval.rs  subsystem_lens_plan.rs  subsystem_lenses.rs  subsystem_memory_lattice.rs  subsystem_mode_policy_binding.rs  subsystem_modes.rs  subsystem_open_memory_mirror.rs  subsystem_output_contracts.rs  subsystem_provider_mock.rs  subsystem_redaction.rs  subsystem_repo_index.rs  subsystem_retrieval.rs  subsystem_router.rs  subsystem_run_capsule.rs  subsystem_skills.rs  subsystem_task_replay.rs  subsystem_tools.rs  subsystem_workspace.rs  tool_workspace_apply_patch.rs
(+149 files in other folders)
