[package]
name = "serverd"
version = "0.1.0"
edition = "2021"

[dependencies]
pie_common = { path = "../common" }
pie_kernel_state = { path = "../kernel_state" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[features]
bin = []

[[bin]]
name = "serverd"
path = "src/main.rs"
required-features = ["bin"]